src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> inst ;
Rule 7     instruction -> condition
Rule 8     instruction -> expr ;
Rule 9     instruction -> inst ,
Rule 10    instruction -> expr ,
Rule 11    inst -> ids = expr
Rule 12    inst -> ids ADDASSIGN expr
Rule 13    inst -> ids SUBASSIGN expr
Rule 14    inst -> ids MULASSIGN expr
Rule 15    inst -> ids DIVASSIGN expr
Rule 16    ids -> ID
Rule 17    ids -> ID [ values ]
Rule 18    inst -> BREAK
Rule 19    inst -> CONTINUE
Rule 20    inst -> RETURN
Rule 21    inst -> RETURN values
Rule 22    inst -> RETURN expr
Rule 23    inst -> PRINT values
Rule 24    inst -> PRINT expr
Rule 25    expr -> expr + expr
Rule 26    expr -> expr - expr
Rule 27    expr -> expr * expr
Rule 28    expr -> expr / expr
Rule 29    expr -> expr DOTADD expr
Rule 30    expr -> expr DOTSUB expr
Rule 31    expr -> expr DOTMUL expr
Rule 32    expr -> expr DOTDIV expr
Rule 33    expr -> expr EQ expr
Rule 34    expr -> expr GEQ expr
Rule 35    expr -> expr LEQ expr
Rule 36    expr -> expr NEQ expr
Rule 37    expr -> expr < expr
Rule 38    expr -> expr > expr
Rule 39    expr -> ( expr )
Rule 40    expr -> expr '
Rule 41    expr -> - expr
Rule 42    expr -> ids
Rule 43    expr -> integer
Rule 44    expr -> float
Rule 45    expr -> string
Rule 46    expr -> matrix
Rule 47    integer -> INTNUM
Rule 48    float -> FLOAT
Rule 49    string -> STRING
Rule 50    matrix -> ZEROS ( values )
Rule 51    matrix -> ONES ( values )
Rule 52    matrix -> EYE ( values )
Rule 53    matrix -> [ rows ]
Rule 54    matrix -> [ rows ; ]
Rule 55    rows -> values
Rule 56    rows -> rows ; values
Rule 57    values -> expr
Rule 58    values -> values , expr
Rule 59    block -> { instructions_opt }
Rule 60    block -> instruction
Rule 61    condition -> if_condition
Rule 62    condition -> for_condition
Rule 63    condition -> while_condition
Rule 64    if_condition -> if_cond
Rule 65    if_condition -> if_cond ELSE block
Rule 66    if_condition -> if_cond ELSE if_condition
Rule 67    if_cond -> IF ( expr ) block
Rule 68    for_condition -> FOR ids = range block
Rule 69    range -> expr : expr
Rule 70    while_condition -> WHILE ( expr ) block

Terminals, with rules where they appear

'                    : 40
(                    : 39 50 51 52 67 70
)                    : 39 50 51 52 67 70
*                    : 27
+                    : 25
,                    : 9 10 58
-                    : 26 41
/                    : 28
:                    : 69
;                    : 6 8 54 56
<                    : 37
=                    : 11 68
>                    : 38
ADDASSIGN            : 12
BREAK                : 18
CONTINUE             : 19
DIVASSIGN            : 15
DOTADD               : 29
DOTDIV               : 32
DOTMUL               : 31
DOTSUB               : 30
ELSE                 : 65 66
EQ                   : 33
EYE                  : 52
FLOAT                : 48
FOR                  : 68
GEQ                  : 34
ID                   : 16 17
IF                   : 67
INTNUM               : 47
LEQ                  : 35
MULASSIGN            : 14
NEQ                  : 36
ONES                 : 51
PRINT                : 23 24
RETURN               : 20 21 22
STRING               : 49
SUBASSIGN            : 13
WHILE                : 70
ZEROS                : 50
[                    : 17 53 54
]                    : 17 53 54
error                : 
{                    : 59
}                    : 59

Nonterminals, with rules where they appear

block                : 65 67 68 70
condition            : 7
expr                 : 8 10 11 12 13 14 15 22 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40 41 57 58 67 69 69 70
float                : 44
for_condition        : 62
ids                  : 11 12 13 14 15 42 68
if_cond              : 64 65 66
if_condition         : 61 66
inst                 : 6 9
instruction          : 4 5 60
instructions         : 2 4
instructions_opt     : 1 59
integer              : 43
matrix               : 46
program              : 0
range                : 68
rows                 : 53 54 56
string               : 45
values               : 17 21 23 50 51 52 55 56 58
while_condition      : 63

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . inst ;
    (7) instruction -> . condition
    (8) instruction -> . expr ;
    (9) instruction -> . inst ,
    (10) instruction -> . expr ,
    (11) inst -> . ids = expr
    (12) inst -> . ids ADDASSIGN expr
    (13) inst -> . ids SUBASSIGN expr
    (14) inst -> . ids MULASSIGN expr
    (15) inst -> . ids DIVASSIGN expr
    (18) inst -> . BREAK
    (19) inst -> . CONTINUE
    (20) inst -> . RETURN
    (21) inst -> . RETURN values
    (22) inst -> . RETURN expr
    (23) inst -> . PRINT values
    (24) inst -> . PRINT expr
    (61) condition -> . if_condition
    (62) condition -> . for_condition
    (63) condition -> . while_condition
    (25) expr -> . expr + expr
    (26) expr -> . expr - expr
    (27) expr -> . expr * expr
    (28) expr -> . expr / expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTMUL expr
    (32) expr -> . expr DOTDIV expr
    (33) expr -> . expr EQ expr
    (34) expr -> . expr GEQ expr
    (35) expr -> . expr LEQ expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr < expr
    (38) expr -> . expr > expr
    (39) expr -> . ( expr )
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . ids
    (43) expr -> . integer
    (44) expr -> . float
    (45) expr -> . string
    (46) expr -> . matrix
    (16) ids -> . ID
    (17) ids -> . ID [ values ]
    (64) if_condition -> . if_cond
    (65) if_condition -> . if_cond ELSE block
    (66) if_condition -> . if_cond ELSE if_condition
    (68) for_condition -> . FOR ids = range block
    (70) while_condition -> . WHILE ( expr ) block
    (47) integer -> . INTNUM
    (48) float -> . FLOAT
    (49) string -> . STRING
    (50) matrix -> . ZEROS ( values )
    (51) matrix -> . ONES ( values )
    (52) matrix -> . EYE ( values )
    (53) matrix -> . [ rows ]
    (54) matrix -> . [ rows ; ]
    (67) if_cond -> . IF ( expr ) block

    $end            reduce using rule 3 (instructions_opt -> .)
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    RETURN          shift and go to state 11
    PRINT           shift and go to state 12
    (               shift and go to state 17
    -               shift and go to state 16
    ID              shift and go to state 22
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    INTNUM          shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32
    [               shift and go to state 23
    IF              shift and go to state 33

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    inst                           shift and go to state 5
    condition                      shift and go to state 6
    expr                           shift and go to state 7
    ids                            shift and go to state 8
    if_condition                   shift and go to state 13
    for_condition                  shift and go to state 14
    while_condition                shift and go to state 15
    integer                        shift and go to state 18
    float                          shift and go to state 19
    string                         shift and go to state 20
    matrix                         shift and go to state 21
    if_cond                        shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . inst ;
    (7) instruction -> . condition
    (8) instruction -> . expr ;
    (9) instruction -> . inst ,
    (10) instruction -> . expr ,
    (11) inst -> . ids = expr
    (12) inst -> . ids ADDASSIGN expr
    (13) inst -> . ids SUBASSIGN expr
    (14) inst -> . ids MULASSIGN expr
    (15) inst -> . ids DIVASSIGN expr
    (18) inst -> . BREAK
    (19) inst -> . CONTINUE
    (20) inst -> . RETURN
    (21) inst -> . RETURN values
    (22) inst -> . RETURN expr
    (23) inst -> . PRINT values
    (24) inst -> . PRINT expr
    (61) condition -> . if_condition
    (62) condition -> . for_condition
    (63) condition -> . while_condition
    (25) expr -> . expr + expr
    (26) expr -> . expr - expr
    (27) expr -> . expr * expr
    (28) expr -> . expr / expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTMUL expr
    (32) expr -> . expr DOTDIV expr
    (33) expr -> . expr EQ expr
    (34) expr -> . expr GEQ expr
    (35) expr -> . expr LEQ expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr < expr
    (38) expr -> . expr > expr
    (39) expr -> . ( expr )
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . ids
    (43) expr -> . integer
    (44) expr -> . float
    (45) expr -> . string
    (46) expr -> . matrix
    (16) ids -> . ID
    (17) ids -> . ID [ values ]
    (64) if_condition -> . if_cond
    (65) if_condition -> . if_cond ELSE block
    (66) if_condition -> . if_cond ELSE if_condition
    (68) for_condition -> . FOR ids = range block
    (70) while_condition -> . WHILE ( expr ) block
    (47) integer -> . INTNUM
    (48) float -> . FLOAT
    (49) string -> . STRING
    (50) matrix -> . ZEROS ( values )
    (51) matrix -> . ONES ( values )
    (52) matrix -> . EYE ( values )
    (53) matrix -> . [ rows ]
    (54) matrix -> . [ rows ; ]
    (67) if_cond -> . IF ( expr ) block

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    }               reduce using rule 2 (instructions_opt -> instructions .)
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 10
    RETURN          shift and go to state 11
    PRINT           shift and go to state 12
    (               shift and go to state 17
    -               shift and go to state 16
    ID              shift and go to state 22
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    INTNUM          shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32
    [               shift and go to state 23
    IF              shift and go to state 33

    instruction                    shift and go to state 34
    inst                           shift and go to state 5
    condition                      shift and go to state 6
    expr                           shift and go to state 7
    ids                            shift and go to state 8
    if_condition                   shift and go to state 13
    for_condition                  shift and go to state 14
    while_condition                shift and go to state 15
    integer                        shift and go to state 18
    float                          shift and go to state 19
    string                         shift and go to state 20
    matrix                         shift and go to state 21
    if_cond                        shift and go to state 24

state 4

    (5) instructions -> instruction .

    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    (               reduce using rule 5 (instructions -> instruction .)
    -               reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    INTNUM          reduce using rule 5 (instructions -> instruction .)
    FLOAT           reduce using rule 5 (instructions -> instruction .)
    STRING          reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    [               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> inst . ;
    (9) instruction -> inst . ,

    ;               shift and go to state 35
    ,               shift and go to state 36


state 6

    (7) instruction -> condition .

    BREAK           reduce using rule 7 (instruction -> condition .)
    CONTINUE        reduce using rule 7 (instruction -> condition .)
    RETURN          reduce using rule 7 (instruction -> condition .)
    PRINT           reduce using rule 7 (instruction -> condition .)
    (               reduce using rule 7 (instruction -> condition .)
    -               reduce using rule 7 (instruction -> condition .)
    ID              reduce using rule 7 (instruction -> condition .)
    FOR             reduce using rule 7 (instruction -> condition .)
    WHILE           reduce using rule 7 (instruction -> condition .)
    INTNUM          reduce using rule 7 (instruction -> condition .)
    FLOAT           reduce using rule 7 (instruction -> condition .)
    STRING          reduce using rule 7 (instruction -> condition .)
    ZEROS           reduce using rule 7 (instruction -> condition .)
    ONES            reduce using rule 7 (instruction -> condition .)
    EYE             reduce using rule 7 (instruction -> condition .)
    [               reduce using rule 7 (instruction -> condition .)
    IF              reduce using rule 7 (instruction -> condition .)
    $end            reduce using rule 7 (instruction -> condition .)
    }               reduce using rule 7 (instruction -> condition .)
    ELSE            reduce using rule 7 (instruction -> condition .)


state 7

    (8) instruction -> expr . ;
    (10) instruction -> expr . ,
    (25) expr -> expr . + expr
    (26) expr -> expr . - expr
    (27) expr -> expr . * expr
    (28) expr -> expr . / expr
    (29) expr -> expr . DOTADD expr
    (30) expr -> expr . DOTSUB expr
    (31) expr -> expr . DOTMUL expr
    (32) expr -> expr . DOTDIV expr
    (33) expr -> expr . EQ expr
    (34) expr -> expr . GEQ expr
    (35) expr -> expr . LEQ expr
    (36) expr -> expr . NEQ expr
    (37) expr -> expr . < expr
    (38) expr -> expr . > expr
    (40) expr -> expr . '

    ;               shift and go to state 37
    ,               shift and go to state 38
    +               shift and go to state 39
    -               shift and go to state 40
    *               shift and go to state 41
    /               shift and go to state 42
    DOTADD          shift and go to state 43
    DOTSUB          shift and go to state 44
    DOTMUL          shift and go to state 45
    DOTDIV          shift and go to state 46
    EQ              shift and go to state 47
    GEQ             shift and go to state 48
    LEQ             shift and go to state 49
    NEQ             shift and go to state 50
    <               shift and go to state 51
    >               shift and go to state 52
    '               shift and go to state 53


state 8

    (11) inst -> ids . = expr
    (12) inst -> ids . ADDASSIGN expr
    (13) inst -> ids . SUBASSIGN expr
    (14) inst -> ids . MULASSIGN expr
    (15) inst -> ids . DIVASSIGN expr
    (42) expr -> ids .

    =               shift and go to state 54
    ADDASSIGN       shift and go to state 55
    SUBASSIGN       shift and go to state 56
    MULASSIGN       shift and go to state 57
    DIVASSIGN       shift and go to state 58
    ;               reduce using rule 42 (expr -> ids .)
    ,               reduce using rule 42 (expr -> ids .)
    +               reduce using rule 42 (expr -> ids .)
    -               reduce using rule 42 (expr -> ids .)
    *               reduce using rule 42 (expr -> ids .)
    /               reduce using rule 42 (expr -> ids .)
    DOTADD          reduce using rule 42 (expr -> ids .)
    DOTSUB          reduce using rule 42 (expr -> ids .)
    DOTMUL          reduce using rule 42 (expr -> ids .)
    DOTDIV          reduce using rule 42 (expr -> ids .)
    EQ              reduce using rule 42 (expr -> ids .)
    GEQ             reduce using rule 42 (expr -> ids .)
    LEQ             reduce using rule 42 (expr -> ids .)
    NEQ             reduce using rule 42 (expr -> ids .)
    <               reduce using rule 42 (expr -> ids .)
    >               reduce using rule 42 (expr -> ids .)
    '               reduce using rule 42 (expr -> ids .)


state 9

    (18) inst -> BREAK .

    ;               reduce using rule 18 (inst -> BREAK .)
    ,               reduce using rule 18 (inst -> BREAK .)


state 10

    (19) inst -> CONTINUE .

    ;               reduce using rule 19 (inst -> CONTINUE .)
    ,               reduce using rule 19 (inst -> CONTINUE .)


state 11

    (20) inst -> RETURN .
    (21) inst -> RETURN . values
    (22) inst -> RETURN . expr
    (57) values -> . expr
    (58) values -> . values , expr
    (25) expr -> . expr + expr
    (26) expr -> . expr - expr
    (27) expr -> . expr * expr
    (28) expr -> . expr / expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTMUL expr
    (32) expr -> . expr DOTDIV expr
    (33) expr -> . expr EQ expr
    (34) expr -> . expr GEQ expr
    (35) expr -> . expr LEQ expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr < expr
    (38) expr -> . expr > expr
    (39) expr -> . ( expr )
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . ids
    (43) expr -> . integer
    (44) expr -> . float
    (45) expr -> . string
    (46) expr -> . matrix
    (16) ids -> . ID
    (17) ids -> . ID [ values ]
    (47) integer -> . INTNUM
    (48) float -> . FLOAT
    (49) string -> . STRING
    (50) matrix -> . ZEROS ( values )
    (51) matrix -> . ONES ( values )
    (52) matrix -> . EYE ( values )
    (53) matrix -> . [ rows ]
    (54) matrix -> . [ rows ; ]

    ;               reduce using rule 20 (inst -> RETURN .)
    ,               reduce using rule 20 (inst -> RETURN .)
    (               shift and go to state 17
    -               shift and go to state 16
    ID              shift and go to state 22
    INTNUM          shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32
    [               shift and go to state 23

    values                         shift and go to state 59
    expr                           shift and go to state 60
    ids                            shift and go to state 61
    integer                        shift and go to state 18
    float                          shift and go to state 19
    string                         shift and go to state 20
    matrix                         shift and go to state 21

state 12

    (23) inst -> PRINT . values
    (24) inst -> PRINT . expr
    (57) values -> . expr
    (58) values -> . values , expr
    (25) expr -> . expr + expr
    (26) expr -> . expr - expr
    (27) expr -> . expr * expr
    (28) expr -> . expr / expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTMUL expr
    (32) expr -> . expr DOTDIV expr
    (33) expr -> . expr EQ expr
    (34) expr -> . expr GEQ expr
    (35) expr -> . expr LEQ expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr < expr
    (38) expr -> . expr > expr
    (39) expr -> . ( expr )
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . ids
    (43) expr -> . integer
    (44) expr -> . float
    (45) expr -> . string
    (46) expr -> . matrix
    (16) ids -> . ID
    (17) ids -> . ID [ values ]
    (47) integer -> . INTNUM
    (48) float -> . FLOAT
    (49) string -> . STRING
    (50) matrix -> . ZEROS ( values )
    (51) matrix -> . ONES ( values )
    (52) matrix -> . EYE ( values )
    (53) matrix -> . [ rows ]
    (54) matrix -> . [ rows ; ]

    (               shift and go to state 17
    -               shift and go to state 16
    ID              shift and go to state 22
    INTNUM          shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32
    [               shift and go to state 23

    values                         shift and go to state 62
    expr                           shift and go to state 63
    ids                            shift and go to state 61
    integer                        shift and go to state 18
    float                          shift and go to state 19
    string                         shift and go to state 20
    matrix                         shift and go to state 21

state 13

    (61) condition -> if_condition .

    BREAK           reduce using rule 61 (condition -> if_condition .)
    CONTINUE        reduce using rule 61 (condition -> if_condition .)
    RETURN          reduce using rule 61 (condition -> if_condition .)
    PRINT           reduce using rule 61 (condition -> if_condition .)
    (               reduce using rule 61 (condition -> if_condition .)
    -               reduce using rule 61 (condition -> if_condition .)
    ID              reduce using rule 61 (condition -> if_condition .)
    FOR             reduce using rule 61 (condition -> if_condition .)
    WHILE           reduce using rule 61 (condition -> if_condition .)
    INTNUM          reduce using rule 61 (condition -> if_condition .)
    FLOAT           reduce using rule 61 (condition -> if_condition .)
    STRING          reduce using rule 61 (condition -> if_condition .)
    ZEROS           reduce using rule 61 (condition -> if_condition .)
    ONES            reduce using rule 61 (condition -> if_condition .)
    EYE             reduce using rule 61 (condition -> if_condition .)
    [               reduce using rule 61 (condition -> if_condition .)
    IF              reduce using rule 61 (condition -> if_condition .)
    $end            reduce using rule 61 (condition -> if_condition .)
    }               reduce using rule 61 (condition -> if_condition .)
    ELSE            reduce using rule 61 (condition -> if_condition .)


state 14

    (62) condition -> for_condition .

    BREAK           reduce using rule 62 (condition -> for_condition .)
    CONTINUE        reduce using rule 62 (condition -> for_condition .)
    RETURN          reduce using rule 62 (condition -> for_condition .)
    PRINT           reduce using rule 62 (condition -> for_condition .)
    (               reduce using rule 62 (condition -> for_condition .)
    -               reduce using rule 62 (condition -> for_condition .)
    ID              reduce using rule 62 (condition -> for_condition .)
    FOR             reduce using rule 62 (condition -> for_condition .)
    WHILE           reduce using rule 62 (condition -> for_condition .)
    INTNUM          reduce using rule 62 (condition -> for_condition .)
    FLOAT           reduce using rule 62 (condition -> for_condition .)
    STRING          reduce using rule 62 (condition -> for_condition .)
    ZEROS           reduce using rule 62 (condition -> for_condition .)
    ONES            reduce using rule 62 (condition -> for_condition .)
    EYE             reduce using rule 62 (condition -> for_condition .)
    [               reduce using rule 62 (condition -> for_condition .)
    IF              reduce using rule 62 (condition -> for_condition .)
    $end            reduce using rule 62 (condition -> for_condition .)
    }               reduce using rule 62 (condition -> for_condition .)
    ELSE            reduce using rule 62 (condition -> for_condition .)


state 15

    (63) condition -> while_condition .

    BREAK           reduce using rule 63 (condition -> while_condition .)
    CONTINUE        reduce using rule 63 (condition -> while_condition .)
    RETURN          reduce using rule 63 (condition -> while_condition .)
    PRINT           reduce using rule 63 (condition -> while_condition .)
    (               reduce using rule 63 (condition -> while_condition .)
    -               reduce using rule 63 (condition -> while_condition .)
    ID              reduce using rule 63 (condition -> while_condition .)
    FOR             reduce using rule 63 (condition -> while_condition .)
    WHILE           reduce using rule 63 (condition -> while_condition .)
    INTNUM          reduce using rule 63 (condition -> while_condition .)
    FLOAT           reduce using rule 63 (condition -> while_condition .)
    STRING          reduce using rule 63 (condition -> while_condition .)
    ZEROS           reduce using rule 63 (condition -> while_condition .)
    ONES            reduce using rule 63 (condition -> while_condition .)
    EYE             reduce using rule 63 (condition -> while_condition .)
    [               reduce using rule 63 (condition -> while_condition .)
    IF              reduce using rule 63 (condition -> while_condition .)
    $end            reduce using rule 63 (condition -> while_condition .)
    }               reduce using rule 63 (condition -> while_condition .)
    ELSE            reduce using rule 63 (condition -> while_condition .)


state 16

    (41) expr -> - . expr
    (25) expr -> . expr + expr
    (26) expr -> . expr - expr
    (27) expr -> . expr * expr
    (28) expr -> . expr / expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTMUL expr
    (32) expr -> . expr DOTDIV expr
    (33) expr -> . expr EQ expr
    (34) expr -> . expr GEQ expr
    (35) expr -> . expr LEQ expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr < expr
    (38) expr -> . expr > expr
    (39) expr -> . ( expr )
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . ids
    (43) expr -> . integer
    (44) expr -> . float
    (45) expr -> . string
    (46) expr -> . matrix
    (16) ids -> . ID
    (17) ids -> . ID [ values ]
    (47) integer -> . INTNUM
    (48) float -> . FLOAT
    (49) string -> . STRING
    (50) matrix -> . ZEROS ( values )
    (51) matrix -> . ONES ( values )
    (52) matrix -> . EYE ( values )
    (53) matrix -> . [ rows ]
    (54) matrix -> . [ rows ; ]

    (               shift and go to state 17
    -               shift and go to state 16
    ID              shift and go to state 22
    INTNUM          shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 29
    ZEROS           shift and go to state 30
    ONES            shift and go to state 31
    EYE             shift and go to state 32
    [               shift and go to state 23

    expr                           shift and go to state 64
    ids                            shift and go to state 61
    integer                        shift and go to state 18
    float                          shift and go to state 19
    string                         shift and go to state 20
    matrix                         shift and go to state 21

state 17

    (39) expr -> ( . expr )
    (25) expr -> . expr + expr
    (26) expr -> . expr - expr
    (27) expr -> . expr * expr
    (28) expr -> . expr / expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DOTSUB expr
    (31) expr -> . expr DOTMUL expr
    (32) expr -> . expr DOTDIV expr
    (33) expr -> . expr EQ expr
    (34) expr -> . expr GEQ expr
    (35) expr -> . expr LEQ expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr < expr
    (38) expr -> . expr > expr
    (39) expr -> . ( expr )
    (40) expr -> . expr '
    (41) expr -> . - expr
    (42) expr -> . ids
    (43) expr -> . integer
    (44) expr -> . float
    (45) expr -> . string
    (46) expr -> . matrix
    (16) ids -> . ID
    (17) ids -> . ID [ values ]
    (47) integer -> . INTNUM
    (48) float -> . FLOAT
    (49) string -> . STRING
    (50) matrix -> . ZEROS ( values )
    (51) matrix -> . ONES ( values )
    (52) matrix -> . EYE ( values )
    (53) matrix -> . [ rows ]
    (54) matrix -> . [ rows ; ]
